# classroom-engagement

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  document.md  pyproject.toml  technical_document.md
apps/api/: main.py
apps/streamlit_app/: app.py
configs/: app.yaml  models.yaml  rules.yaml
docs/: architecture.md
models/mediapipe/: README.md
requirements/: base.txt  dev.txt  ml.txt
scripts/: download_all_models.ps1  download_mediapipe_models.ps1  run_api.ps1  run_demo.ps1  setup_env.ps1  test_api_session.ps1  validate_local_runtime.ps1
src/classroom_engagement/: config.py  settings.py
src/classroom_engagement/api/: __init__.py  schemas.py  service.py
src/classroom_engagement/core/: __init__.py  class_state.py  schemas.py
src/classroom_engagement/pipeline/: __init__.py  components.py  engine.py  signals.py
src/classroom_engagement/ui/: __init__.py  formatting.py
src/classroom_engagement/video/: __init__.py  source.py
tests/: test_api.py  test_imports.py
